crates/reap-okx-live-adapter/tests/ui/roles_no_unsupported_mutations.stderr
error[E0599]: no method named `cancel_algo_orders` found for reference `&LiveSafety` in the current scope
 --> tests/ui/roles_no_unsupported_mutations.rs:7:20
  |
7 |     let _ = safety.cancel_algo_orders();
  |                    ^^^^^^^^^^^^^^^^^^
  |
help: there is a method `cancel_all_after` with a similar name, but with different arguments
 --> src/lib.rs
  |
  |     pub async fn cancel_all_after(&self, timeout_secs: u64) -> Result<(), RestError> {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no method named `spread_mass_cancel` found for reference `&LiveSafety` in the current scope
 --> tests/ui/roles_no_unsupported_mutations.rs:8:20
  |
8 |     let _ = safety.spread_mass_cancel();
  |                    ^^^^^^^^^^^^^^^^^^ method not found in `&LiveSafety`

error[E0599]: no method named `spread_cancel_all_after` found for reference `&LiveSafety` in the current scope
 --> tests/ui/roles_no_unsupported_mutations.rs:9:20
  |
9 |     let _ = safety.spread_cancel_all_after();
  |                    ^^^^^^^^^^^^^^^^^^^^^^^
  |
help: there is a method `cancel_all_after` with a similar name, but with different arguments
 --> src/lib.rs
  |
  |     pub async fn cancel_all_after(&self, timeout_secs: u64) -> Result<(), RestError> {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no method named `amend_order` found for reference `&LiveSafety` in the current scope
  --> tests/ui/roles_no_unsupported_mutations.rs:10:20
   |
10 |     let _ = safety.amend_order();
   |                    ^^^^^^^^^^^ method not found in `&LiveSafety`

error[E0599]: no method named `submit_algo_order` found for reference `&ForbiddenOrderObserver` in the current scope
  --> tests/ui/roles_no_unsupported_mutations.rs:12:23
   |
12 |     let _ = forbidden.submit_algo_order();
   |                       ^^^^^^^^^^^^^^^^^ method not found in `&ForbiddenOrderObserver`

error[E0599]: no method named `cancel_algo_orders` found for reference `&ForbiddenOrderObserver` in the current scope
  --> tests/ui/roles_no_unsupported_mutations.rs:13:23
   |
13 |     let _ = forbidden.cancel_algo_orders();
   |                       ^^^^^^^^^^^^^^^^^^ method not found in `&ForbiddenOrderObserver`

error[E0599]: no method named `submit_spread_order` found for reference `&ForbiddenOrderObserver` in the current scope
  --> tests/ui/roles_no_unsupported_mutations.rs:14:23
   |
14 |     let _ = forbidden.submit_spread_order();
   |                       ^^^^^^^^^^^^^^^^^^^ method not found in `&ForbiddenOrderObserver`

error[E0599]: no method named `spread_mass_cancel` found for reference `&ForbiddenOrderObserver` in the current scope
  --> tests/ui/roles_no_unsupported_mutations.rs:15:23
   |
15 |     let _ = forbidden.spread_mass_cancel();
   |                       ^^^^^^^^^^^^^^^^^^ method not found in `&ForbiddenOrderObserver`

error[E0599]: no method named `amend_order` found for reference `&ForbiddenOrderObserver` in the current scope
  --> tests/ui/roles_no_unsupported_mutations.rs:16:23
   |
16 |     let _ = forbidden.amend_order();
   |                       ^^^^^^^^^^^ method not found in `&ForbiddenOrderObserver`
